# aapt2

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CMakeLists.txt  README.md  aapt2-Apktool-patches.patch  build.sh  package-lock.json  package.json  patch.sh  prepare.sh  setup.sh
.github/: dependabot.yml
.github/workflows/: build.yml  build_pull_request.yml  open_pull_request.yml  release.yml
build-tools/: CMakeLists.txt  aapt2.cmake
build-tools-android/: CMakeLists.txt  README.md
build-tools-android/cmake/: aapt.cmake  aapt2.cmake  aidl.cmake  libandroidfw.cmake  libbase.cmake  libcutils.cmake  libexpat.cmake  libfmt.cmake  libgtest.cmake  libincfs.cmake  libjson.cmake  liblog.cmake  libpackagelistparser.cmake  libpcre.cmake  libpng.cmake  libprocessgroup.cmake  libprotobuf.cmake  libselinux.cmake  libsepol.cmake  libutils.cmake  libziparchive.cmake  libzopfli.cmake  protoc.cmake  zipalign.cmake
cmake/: CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  libandroidfw.cmake  libbase.cmake  libbuildversion.cmake  libcutils.cmake  libexpat.cmake  libfmt.cmake  libincfs.cmake  libjson.cmake  liblog.cmake  libpackagelistparser.cmake  libpcre.cmake  libpng.cmake  libprocessgroup.cmake  libprotobuf.cmake  libprotoc.cmake  libselinux.cmake  libsepol.cmake  libsparse.cmake  libutils.cmake  libziparchive.cmake  libzopfli.cmake  protoc.cmake  zipalign.cmake
lib/: CMakeLists.txt  libprocessgroup.cmake  libsepol.cmake  libutils.cmake  libziparchive.cmake
patches/: 32bsystem_on_armv8.patch  aapt2-Add-branding.patch  aapt2-Apktool-patches.patch  aapt2.patch  androidfw.patch  apktool_ibotpeaches.patch  boringssl.patch  incremental_delivery.patch  libpng.patch  protobuf.patch  selinux.patch
termux/: Aapt-use-Apktool-fork.patch  aapt2-Do-not-clone-base.patch
